# paper-bridge

./: .dockerignore  .env.template  .gitignore  README.ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.virtual_documents/ipynb/: test-graphrag-toolkit.ipynb
assets/: paper-bridge-architecture.drawio  paper-bridge-dataflow.drawio  paper-bridge-pipeline.excalidraw  paper-bridge-workflow.excalidraw  render-excalidraw.mjs  tech-doc.md
docs/: tech-doc.md
docs/diagrams/: paper-bridge-architecture.drawio  paper-bridge-dataflow.drawio  paper-bridge-pipeline.excalidraw  paper-bridge-workflow.excalidraw
ipynb/: exploration.ipynb  querying-neptune.ipynb  querying.ipynb
logs/: logs_2025-02-04.txt  logs_2025-02-05.txt  logs_2025-02-06.txt  logs_2025-02-12.txt  logs_2025-02-13.txt
paper_bridge/cleaner/: Dockerfile  main.py  requirements.txt
paper_bridge/cleaner/configs/: config.py  config.yaml
paper_bridge/cleaner/src/: __init__.py  aws_helpers.py  cleaner.py  constants.py  logger.py
paper_bridge/indexer/: Dockerfile  main.py  requirements.txt  run_batch.py
paper_bridge/indexer/configs/: __init__.py  config.py  config.yaml
paper_bridge/indexer/src/: __init__.py  aws_helpers.py  constants.py  fetcher.py  indexer.py  logger.py  utils.py
paper_bridge/indexer/src/prompts/: __init__.py  prompts.py
paper_bridge/papers/2503_11647/: parsed.json
paper_bridge/shared/: __init__.py  arxiv_client.py  base_models.py  constants.py  graph_schema.py  logger.py  neptune_client.py  notifications.py  opensearch_client.py  paper_selection.py  prompt_caching.py  text_utils.py
paper_bridge/summarizer/: Dockerfile  main.py  requirements.txt  run_batch.py
paper_bridge/summarizer/configs/: config.py  config.yaml
paper_bridge/summarizer/src/: __init__.py  aws_helpers.py  constants.py  fetcher.py  logger.py  pipeline.py  renderer.py  retriever.py  summarizer.py  utils.py
paper_bridge/summarizer/src/input_handlers/: __init__.py  arxiv_handler.py  base.py  generic_handler.py
paper_bridge/summarizer/src/output_handlers/: __init__.py  base.py  github_handler.py  slack_handler.py
paper_bridge/summarizer/src/prompts/: __init__.py  prompts.py
paper_bridge/summarizer/templates/: template.html
scripts/: cleaner_buildspec.yml  indexer_buildspec.yml  start-port-forwarding.sh  summarizer_buildspec.yml  terminate-ssm.sh
terraform/: .terraform.lock.hcl  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/environments/dev/: terraform.tfvars.template
terraform/modules/base/: main.tf  outputs.tf  variables.tf
terraform/modules/client/: main.tf  outputs.tf  variables.tf
terraform/modules/neptune/: main.tf  outputs.tf  variables.tf
terraform/modules/opensearch/: main.tf  outputs.tf  variables.tf
terraform/modules/workload/: main.tf  outputs.tf  user_data.sh  variables.tf
tests/: conftest.py  fetch_papers.py  index_papers.py  test_arxiv_client.py  test_aws_integration.py  test_base_models.py  test_cleaner_config.py  test_cleaner_main.py  test_config_files_parse.py  test_generic_handler.py  test_indexer_config.py  test_indexer_orchestration.py  test_indexer_utils.py  test_loggers.py  test_paper_selection.py  test_pipeline.py  test_prompt_caching.py  test_retriever_logic.py  test_send_files_to_slack.py  test_shared_constants.py  test_shared_neptune_client.py  test_shared_notifications.py  test_shared_opensearch_client.py  test_slack_blocks.py  test_summarizer_aws_helpers.py  test_summarizer_config.py  test_summarizer_logic.py  test_summarizer_utils.py  test_summarizer_utils_io.py  test_text_utils.py
tests/output/batch-propositions/20250222-002832/0/inputs/: proposition_extraction_20250222-002832_batch_0.jsonl
tests/output/batch-propositions/20250222-002832/0/outputs/: manifest.json.out  proposition_extraction_20250222-002832_batch_0.jsonl.out
tests/output/batch-propositions/20250222-010813/0/inputs/: proposition_extraction_20250222-010813_batch_0.jsonl
tests/output/batch-propositions/20250222-010813/0/outputs/: manifest.json.out  proposition_extraction_20250222-010813_batch_0.jsonl.out
tests/output/batch-topics/20250222-003746/0/inputs/: topic_extraction_20250222-003746_0.jsonl
tests/output/batch-topics/20250222-003746/0/outputs/: manifest.json.out  topic_extraction_20250222-003746_0.jsonl.out
tests/output/batch-topics/20250222-011625/0/inputs/: topic_extraction_20250222-011625_0.jsonl
tests/output/batch-topics/20250222-011625/0/outputs/: manifest.json.out  topic_extraction_20250222-011625_0.jsonl.out
