[tool.poetry]
name = "paper-bridge"
version = "0.1.0"
description = "A project that delivers daily AI/ML paper summaries"
authors = ["Jonas Kim <youngmki@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
graphrag-toolkit = {url = "https://github.com/awslabs/graphrag-toolkit/archive/refs/tags/v1.1.3.zip"}
requests-aws4auth = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

