[tool.poetry]
name = "paper-bridge"
version = "0.1.0"
description = "A project that delivers daily AI/ML paper summaries"
authors = ["Jonas Kim <youngmki@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arxiv = "^2.1.3"
gremlinpython = "^3.7.3"
ipykernel = "^6.29.5"
jupyter-black = "^0.4.0"
jupyterlab = "^4.3.5"
llama-index-core = "0.12.6"
llama-index-llms-bedrock = "^0.3.3"
# llama-index-multi-modal-llms-bedrock = "^0.1.0"
llama-parse = "^0.6.1"
pdf2image = "^1.17.0"
pdfminer-six = "^20240706"
pi-heif = "^0.21.0"
pymupdf = "^1.25.3"
pypdf2 = "^3.0.1"
requests-aws4auth = "^1.3.1"
unstructured = "^0.16.23"
unstructured-inference = "^0.8.7"
unstructured-pytesseract = "^0.3.13"
graphrag-toolkit = {url = "https://github.com/awslabs/graphrag-toolkit/archive/refs/tags/v2.0.1.zip"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
options.system-site-packages = true
