[tool.poetry]
name = "paper-bridge"
version = "0.1.0"
description = "A project that delivers daily AI/ML paper summaries"
authors = ["Jonas Kim <youngmki@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# Upper-bounded at <3.14 because graphrag-lexical-graph v3 depends on spacy 3.8.x
# (requires Python <3.14). graphrag also requires Python >=3.10.
python = ">=3.11,<3.14"
amazon-q-developer-jupyterlab-ext = "^3.4.7"
arxiv = "^2.1.3"
# graphrag v3 imports pydantic.warnings.UnsupportedFieldAttributeWarning at
# module load, which only exists in pydantic >=2.12. Without this floor, adding
# llama-index-vector-stores-opensearch lets the solver pick 2.11.x (via an
# anthropic downgrade) and graphrag fails to import. The Docker images install
# 2.13.x via pip already; this keeps the poetry/test env in the same window.
pydantic = ">=2.12,<3"
gremlinpython = "^3.7.3"
ipykernel = "^6.29.5"
jupyter-black = "^0.4.0"
jupyterlab = "^4.3.5"
llama-index-core = "0.14.20"
llama-parse = "^0.6.1"
pdf2image = "^1.17.0"
pdfminer-six = "^20240706"
pi-heif = "^0.21.0"
pymupdf = "^1.25.3"
pypdf2 = "^3.0.1"
requests-aws4auth = "^1.3.1"
unstructured = "^0.16.23"
unstructured-inference = "^0.8.7"
unstructured-pytesseract = "^0.3.13"
webdriver-manager = "^4.0.2"
# graphrag v3 (graphrag-lexical-graph) relaxed botocore to >=1.40.61, which is
# compatible with bedrock-converse's aioboto3 chain — so boto3/botocore and
# converse + graphrag now co-install (the old exact 1.35.88 pin is gone).
boto3 = ">=1.40.61"
# graphrag-toolkit was renamed to graphrag-lexical-graph in v3; install the
# pinned v3.18.3 tag from the `lexical-graph` subdirectory of the monorepo.
graphrag-lexical-graph = {git = "https://github.com/awslabs/graphrag-toolkit.git", rev = "graphrag-lexical-graph/v3.18.3", subdirectory = "lexical-graph"}
# Direct first-party imports used by the summarizer (made explicit, not transitive):
beautifulsoup4 = "^4.12.0"
gitpython = "^3.1.0"
httpx = "^0.27.0"
jinja2 = "^3.1.0"
nest-asyncio = "^1.6.0"
opensearch-py = "^2.8.0"
pillow = "^10.0.0"
pygithub = "^2.0.0"
python-dotenv = "^1.0.1"
requests = "^2.32.0"
selenium = "^4.29.0"
# Bedrock LLM backend. graphrag v3 pins converse to exactly 0.14.6 (alongside
# llama-index-core 0.14.20), so pin it here too. converse covers both text chat
# (indexer/summarizer main-content + retrieval summarization) and multimodal
# figure analysis via ChatMessage ImageBlocks — which is why the old
# llama-index-llms-bedrock and llama-index-multi-modal-llms-bedrock packages were
# dropped (the latter is stale and pins core==0.13.6, incompatible with v3).
llama-index-llms-bedrock-converse = "0.14.6"
# graphrag v3's VectorStoreFactory loads the OpenSearch (aoss://) vector store
# lazily; it is an optional graphrag extra, so it must be declared explicitly or
# both indexer and summarizer fail at graph build/retrieve with "opensearch-py
# and/or llama-index-vector-stores-opensearch packages not found". 0.6.3 is the
# newest release that supports core <0.15,>=0.13 AND opensearch-py<3 — the 1.x
# line requires opensearch-py>=3, which conflicts with graphrag's 2.8.0 pin.
llama-index-vector-stores-opensearch = "0.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"
moto = "^5.0.0"
responses = "^0.25.0"
ruff = "^0.6.0"
black = "^24.0.0"
mypy = "^1.11.0"
bandit = "^1.7.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
options.system-site-packages = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra -q --strict-markers"
markers = [
    "unit: fast isolated unit tests (no network, no AWS)",
    "integration: integration tests with mocked external services",
]

[tool.coverage.run]
source = ["paper_bridge"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["ipynb", "outputs", "output", "logs", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Package __init__ files are re-export hubs (some use PEP 562 lazy exports with a
# TYPE_CHECKING import block); their "unused" imports are the public API.
"**/__init__.py" = ["F401"]
# Tests deliberately assert on broad exceptions for Pydantic/argparse validation.
"tests/**" = ["B017"]
# Prompt templates contain trailing spaces that are semantically significant
# (line-continuation token separators in multi-line LLM prompts).
"**/prompts/prompts.py" = ["W291"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
no_implicit_optional = true
files = ["paper_bridge"]
# The three apps each have a same-named ``configs`` package; without explicit
# package bases mypy aborts with "Duplicate module named configs" before
# checking anything. Treat paper_bridge as the import root.
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
